[package]
name = "listload"
version = "0.2.0"
edition = "2021"
license = "EUPL-1.2"
authors = ["Adrian Wannenmacher <tfld@tfld.dev>"]
description = "Download a list of predefined files."
repository = "https://github.com/TeFiLeDo/listload"
categories = ["command-line-utilities"]
keywords = ["download", "http", "https"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["env", "derive", "wrap_help", "cargo", "unicode"] }
directories = "5.0.1"
fs4 = "0.6.6"
human-panic = "1.2.1"
rand = "0.8.5"
reqwest = { version = "0.11.20", features = ["brotli", "deflate", "gzip"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
